[package]
name = "piston_rs"
description = "An async wrapper for the Piston code execution engine."
version = "0.4.2"
edition = "2021"
authors = ["Jonxslays"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Jonxslays/piston_rs"
repository = "https://github.com/Jonxslays/piston_rs"
documentation = "https://docs.rs/piston_rs"
keywords = ["piston-rs", "piston", "emkc", "code"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "piston_rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
